css/style.css
/* ... */
.colorPicker::-webkit-color-swatch{
    border: none;
    outline: none;
    border-radius: 100px;
    color: var(--dark-color);
}

input.colorPicker#darkPicker{
    color: var(--dark-color);
    grid-row: 2 / 3;
    grid-column: 1 / 2;
}

input.colorPicker#darkLightPicker{
    color: var(--darkLight-color);
    grid-row: 2 / 3;
    grid-column: 2 / 3;
}

input.colorPicker#lightPicker{
    color: var(--light-color);
    grid-row: 2 / 3;
    grid-column: 3 / 4;
}

input.colorPicker#lightLightPicker {
    color: var(--lightLight-color);
    grid-row: 2 / 3;
    grid-column: 4 / 5;
}

input.colorPicker#textPicker {
    color: var(--text-color);
    grid-row: 2 / 3;
    grid-column: 1 / 2;
    align-self: flex-end;
    margin-bottom: 50px;
}

@media screen and (max-width: 1180px), (max-height: 820px), (max-width: 820px), (max-height: 1180px){
    _::-webkit-full-page-media, _:future, :root .body {
        padding-top: 65px;
        padding-bottom: 0px;
    }

    .body{
        width: 100vw;
    }

    .loginBox{
        width: 80%;
        height: 90%;
    }

    .createAccountBox{
        width: 80%;
        height: 90%;
    }

    .loginInputs{
        justify-content: center;
        width: 80%;
        height: 80%;
    }

    .loginInput{
        height: 30vh;
    }

    .useOption{
        font-size: 125%;
    }

    .loginInputs h1{
        font-size: 100px;
    }

    .loginInputs h2{
        font-size: 30px;
    }

    .loginInput{
        height: 100px;
    }

    .loginInput input{
        font-size: 30px;
    }

    .loginPageButton h1{
        font-size: 40px;
    }

    .loginInputSeperator{
        height: 20px;
        border-radius: 10px;
    }

    .loginInputs h3{
        font-size: 40px;
    }
}

@media screen and (max-height: 1100px){
    .welcomeBox{
        height: 90%;
    }

    .loginBox{
        height: 90%;
    }

    .loginInputs{
        height: 90%;
        width: 90%;
    }

    #createAccountInputs h1{
        font-size: 60px;
    }
}

@media screen and (max-width: 550px), (max-height: 667px), (max-width: 667px), (max-height: 550px){
    .welcome, .login, .main, .login{
        padding-bottom: env(safe-area-inset-bottom);
    }

    .welcomeBox{
        width: 100%;
        height: 100%;
    }
    
    .loginBox{
        width: 95%;
        height: 97.25%;
    }

    .loginInputs{
        justify-content: flex-start;
        width: 90%;
        height: 95%;
    }

    .createAccountInputs h1{
        height: 30px;
    }

    .loginInputs h1{
        font-size: 80px;
    }

    .loginInputs h2{
        font-size: 40px;
    }

    .loginPageButton h1{
        font-size: 20px;
    }

    .loginInput{
        height: 150px;
    }

    .loginInput input{
        font-size: 40px;
    }

    .loginInputSeperator{
        height: 10px;
    }

    .welcomeTopBarText{
        font-size: 50px;
    }

    .welcomeText h2{
        font-size: 25px;
    }

    .welcomeText p{
        font-size: 15px;
    }

    .useOption{
        font-size: 150%;
    }

    .loginActionGroup{
        height: 100px;
    }

    .loginActionGroup div.loginInput{
        height: 100px;
    }

    .loginActionGroup h2{
        font-size: 30px;
        margin: 10px;
    }

    .welcomeFullscreen, .welcomeFullscreen:hover, .welcomeFullscreen:active, .welcomeFullscreen:focus{
        top: 3px;
        right: 3px;
        height: 45px;
        width: 45px;
    }
    
    #welcomeFullscreenIcon, #welcomeFullscreenIcon:focus{
        font-size: 40px;
    }
    
    .welcomeFullscreenButton #welcomeFullscreenIcon:hover{
        font-size: 45px;
    }
    
    .welcomeFullscreenButton #welcomeFullscreenIcon:active{
        font-size: 35px;
    }

}

@media screen and (max-width: 500px), (max-height: 1000px){
    .useOption{
        font-size: 100%;
    }
}

